--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:gravity="center"
+        android:orientation="vertical"
         tools:context=".MainActivity">
 
-    <TextView
+    <ImageView
+            android:id="@+id/dice_image"
+            android:layout_gravity="center_horizontal"
+            android:src="@drawable/empty_dice"
+            android:layout_height="wrap_content"
+            android:layout_width="wrap_content"
+            android:visibility="gone"/>
+
+    <Button
+            android:id="@+id/btn_putar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Hello World!"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:layout_gravity="center_horizontal"
+            android:text="Putar"
+            android:visibility="gone"/>
 
-</android.support.constraint.ConstraintLayout>
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:orientation="horizontal">
+
+        <ImageView
+                   android:id="@+id/ivdadu1"
+                   android:layout_width="100dp"
+                   android:layout_height="100dp"
+                   android:src="@drawable/pia2"
+                   android:layout_weight="1"/>
+
+        <TextView android:layout_width="wrap_content"
+                  android:layout_height="match_parent"
+                  android:gravity="center"
+                  android:text="VS"
+                  android:textSize="30dp"/>
+        <ImageView
+                   android:id="@+id/ivdadu2"
+                   android:layout_width="100dp"
+                   android:layout_height="100dp"
+                   android:src="@drawable/cewe1"
+                   android:layout_weight="1"/>
+    </LinearLayout>
+
+    <Button android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:text="MATCH"
+            android:id="@+id/btnMatch"
+            android:layout_gravity="center"/>
+
+
+</LinearLayout>
