--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,21 +8,12 @@
         android:orientation="vertical"
         tools:context=".MainActivity">
 
-    <ImageView
-            android:id="@+id/dice_image"
-            android:layout_gravity="center_horizontal"
-            android:src="@drawable/empty_dice"
-            android:layout_height="wrap_content"
-            android:layout_width="wrap_content"
-            android:visibility="gone"/>
+    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
+    android:text="Wanita                                    Pria"
+    android:gravity="center"
+    android:textSize="20dp"
+    android:textColor="@android:color/black"/>
 
-    <Button
-            android:id="@+id/btn_putar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="Putar"
-            android:visibility="gone"/>
 
     <LinearLayout android:layout_width="match_parent"
                   android:layout_height="wrap_content"
@@ -32,7 +23,7 @@
                    android:id="@+id/ivdadu1"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
-                   android:src="@drawable/pia2"
+                   android:src="@drawable/fuji_mobile"
                    android:layout_weight="1"/>
 
         <TextView android:layout_width="wrap_content"
@@ -44,7 +35,7 @@
                    android:id="@+id/ivdadu2"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
-                   android:src="@drawable/cewe1"
+                   android:src="@drawable/iav_mobile"
                    android:layout_weight="1"/>
     </LinearLayout>
 
